# pytemplate

./: LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  rock_paper_scissors.html  search.html  searchindex.js  untested.html
.github/workflows/: CI.yml  Docs.yml
_sources/: index.rst.txt  rock_paper_scissors.rst.txt  untested.rst.txt
docs/source/: conf.py
doctrees/: environment.pickle  index.doctree
html/: .buildinfo
pytemplate/: rock_paper_scissors.py  untested.py
test/: test_rock_paper_scissors.py  test_untested.py
