[tool.poetry]
name = "pytemplate"
version = "0.1.0"
description = "A template for building a python pkg"
authors = ["JingYu Ning <115336923+jrunkening@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
